# genre-tagging

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT_STRATEGY.md  Dockerfile  PRD.md  README.md  capacitor.config.json  config.json.example  devops.md  healthcheck.sh  package-lock.json  package.json  pyproject.toml  requirements.txt
.beads/: metadata.json
.claude/: settings.json  settings.local.json
.claude/plans/: aws-deployment.md  backend-modernization.md  dance-stances-tab.md  frontend-health.md  frontend-modernization.md  multi-user.md  security-and-correctness.md  (+3 more)
.ipynb_checkpoints/: README-checkpoint.md
app/: autoset.py  chat.py  chat_tools.py  config.py  dedup.py  llm.py  main.py  main_fastapi.py  main_flask.py  parser.py  persistence.py  phases.py  playlist.py  routes.py  setbuilder.py  state.py  tagger.py  tasks.py  tree.py
data/: playlist.csv
docs/: collection-tree-pipeline.md  devops.md  music-tree (3).html  playback.md
frontend/: eslint.config.js  package.json  vite.config.ts  vitest.config.ts
notebooks/: genre_tagging_template.ipynb  genre_tagging_template_with_comments.ipynb
output/: .last_upload.json  All tracks Exporter_autosave.csv  PureElectroGroove_GenreTagged.csv  app.log.1  app.log.2  app.log.3  artwork_cache.json  beads-setup-guide.md  collection_tree.json  playlist_output.csv  playlists.json  saved_sets.json  scene_tree.json  set_workshop_state.json
research/: BUILD_PLAN.md  Rave it!!!!!!!.m3u8  architecture-review.md  music-collection-tree-plan.md
scripts/: setup-ssm-agent.sh  setup-swap.sh
www/: index.html
(+174 files in other folders)
