[project]
name = "genre-tagging"
version = "1.0.0"
description = "DJ tool: auto-tag tracks with genre/style comments via LLM, browse curated trees, build DJ sets"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.78.0",
    "dropbox>=12.0.0",
    "flask>=3.1.0",
    "openai>=2.17.0",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "tenacity>=9.1.3",
]