[project]
name = "genre-tagging"
version = "1.0.0"
description = "DJ tool: auto-tag tracks with genre/style comments via LLM, browse curated trees, build DJ sets"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.78.0",
    "dropbox>=12.0.0",
    "fastapi>=0.129.0",
    "flask>=3.1.2",
    "openai>=2.17.0",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "tenacity>=9.1.3",
    "uvicorn[standard]>=0.41.0",
]
